# dmt

./: Cargo.toml  LICENSE
crates/dmt/: Cargo.toml
crates/dmt-cli/: Cargo.toml
crates/dmt-cli/src/: lib.rs  main.rs
crates/dmt/src/: cli.rs  config.rs  io.rs  lib.rs  main.rs
crates/dmt/src/commands/: rollback_migration.rs  run_migrations.rs
crates/dmt/src/config/: toml.rs  yaml.rs
crates/libdmt/: Cargo.toml  dmt.config.toml
crates/libdmt-macros/: Cargo.toml
crates/libdmt-macros/src/: lib.rs
crates/libdmt/src/: commands.rs  config.rs  database.rs  io.rs  lib.rs  migrator.rs
crates/libdmt/src/commands/: new_migration.rs  rollback_migration.rs  run_migrations.rs
crates/libdmt/src/config/: toml.rs  yaml.rs
crates/libdmt/src/database/: postgres.rs  turso.rs
crates/libdmt/tests/: migrate_tests.rs
development/: docker-compose.yml
src/: cli.rs  commands.rs  config.rs  database.rs  io.rs  lib.rs  main.rs
src/commands/: new_migration.rs  rollback_migration.rs  run_migrations.rs
src/database/: postgres.rs
test/: dmt.config.yml
test/migrations/20221014195913_add_vehicles_table/: down.sql  up.sql
test/migrations/20221015155759_add_another_test_table/: down.sql  up.sql
