[package]
name = "dmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.15", features = ["derive"] }
postgres = { version = "0.19.4", features = [ "with-chrono-0_4" ] }
serde = { version = "1.0.145", features=["derive"] }
serde_yaml = "0.9.13"
